# data_science_cookicutter

./: .dockerignore  LICENSE  README.md  cookiecutter.json  jupyter_entrypoint.sh  pyproject.toml
{{cookiecutter.package_name}}/: Dockerfile  collect_data.sh  jupyter_notebook_config.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  configure_loguru.py  main.py
