[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
loguru = "^0.5.3"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
seaborn = "^0.11.1"
pathlib = "^1.0.1"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
